check6.txt
cargo :     Checking 
soroban-debugger 
v0.1.0 (C:\Users\HomeP
C\Desktop\DRIPS 
W3\soroban-debugger)
At line:1 char:1
+ cargo check 
--all-targets 
--all-features 2>&1 | 
Out-File -FilePath ch 
...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng so...roban-deb    
ugger):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: unused 
import: 
`FunctionProfile`
 --> src\profiler\flam
egraph.rs:1:33
  |
1 | use crate::profile
r::analyzer::{Function
Profile, 
OptimizationReport};
  |                   
              
^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

error[E0599]: no 
method named `width` 
found for struct `infe
rno::flamegraph::Optio
ns<'a>` in the 
current scope
  --> src\profiler\fla
megraph.rs:81:14
   |
80 |           let 
mut renderer = inferno
::flamegraph::Options:
:default()
   |  ________________
____________-
81 | |             
.width(width)
   | |             
-^^^^^ method not 
found in `inferno::fla
megraph::Options<'_>`
   | |_____________|
   |

warning: variable `sto
rage_calls_outside_loo
ps` is assigned to, 
but never used
   --> src\analyzer\se
curity.rs:680:9
    |
680 |     let mut stor
age_calls_outside_loop
s = 0usize;
    |         ^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^
    |
    = note: consider 
using `_storage_calls_
outside_loops` instead
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: variable `con
ditional_branches` is 
assigned to, but 
never used
   --> src\analyzer\se
curity.rs:683:9
    |
683 |     let mut 
conditional_branches 
= 0usize;
    |         ^^^^^^^^
^^^^^^^^^^^^^^^^
    |
    = note: consider 
using `_conditional_br
anches` instead

warning: value 
assigned to `storage_c
alls_outside_loops` 
is never read
   --> src\analyzer\se
curity.rs:758:37
    |
758 | ...             
      storage_calls_ou
tside_loops += 1;
    |                 
      ^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?
    = note: `#[warn(un
used_assignments)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: value 
assigned to `condition
al_branches` is never 
read
   --> src\analyzer\se
curity.rs:733:29
    |
733 | ...             
      
conditional_branches 
+= 1;
    |                 
      ^^^^^^^^^^^^^^^^
^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?

warning: value 
assigned to `condition
al_branches` is never 
read
   --> src\analyzer\se
curity.rs:763:29
    |
763 | ...             
      
conditional_branches 
+= 1;
    |                 
      ^^^^^^^^^^^^^^^^
^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?

warning: value 
assigned to 
`operation` is never 
read
   --> 
src\lib.rs:103:22
    |
103 |     
RequestTimeout { 
operation: String, 
timeout_ms: u64 },
    |                 
     ^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?

warning: value 
assigned to 
`timeout_ms` is never 
read
   --> 
src\lib.rs:103:41
    |
103 |     
RequestTimeout { 
operation: String, 
timeout_ms: u64 },
    |                 
                      
  ^^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?

For more information 
about this error, try 
`rustc --explain 
E0599`.
warning: 
`soroban-debugger` 
(lib) generated 8 
warnings
error: could not 
compile 
`soroban-debugger` 
(lib) due to 1 
previous error; 8 
warnings emitted
warning: build 
failed, waiting for 
other jobs to 
finish...
warning: 
`soroban-debugger` 
(lib test) generated 
7 warnings (7 
duplicates)
error: could not 
compile 
`soroban-debugger` 
(lib test) due to 1 
previous error; 7 
warnings emitted
